# aadhaar-age-proof

./: README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: app.html
frontend/src/lib/: stores.js  util.js  worker.js
frontend/src/lib/components/: PublicParams.svelte  SpinnerButton.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/prove/: +page.svelte
frontend/src/routes/verify/: +page.svelte
frontend/static/: demo-proof.json
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  utils.rs  wasm.rs
