[package]
name = "nova-aadhaar-qr-browser"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
nova-aadhaar-qr = { path = "../../nova-aadhaar-qr" }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
nova-snark = { git = "https://github.com/microsoft/Nova.git", default-features = false, rev = "ac8b057cd6fbc2aba7b2888a9b9c37fec9119d45" }
wasm-bindgen-rayon = "1.2.1"
console_error_panic_hook = { version = "0.1.7", optional = true}
wasm-bindgen-futures = "0.4.43"
web-time = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sha2 = { version = "0.10.8", default-features = false }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"

[lib]
crate-type = ["cdylib", "rlib"]
